--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,10 +22,13 @@ dependencies:
   firebase_storage: ^5.1.0
   image_picker: ^0.6.7+14
   shared_preferences: ^0.5.12+4
+  dartz: ^0.9.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  mockito: ^4.1.3
+  cloud_firestore_mocks: ^0.5.2+1
     
 flutter:
   uses-material-design: true
