--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,27 +11,26 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  cloud_firestore: ^0.14.3+1
   cupertino_icons: ^1.0.0
-  flutter_icons: ^1.1.0
-  flutter_bloc: ^6.1.1
+  dartz: ^0.9.2
   equatable: ^1.2.5
   firebase_auth: ^0.18.3+1
-  cloud_firestore: ^0.14.3+1
   firebase_core: ^0.5.2+1
   firebase_storage: ^5.1.0
+  flutter_bloc: ^6.1.1
+  flutter_icons: ^1.1.0
+  get_it: ^5.0.3
   image_picker: ^0.6.7+14
   shared_preferences: ^0.5.12+4
-  dartz: ^0.9.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   mockito: ^4.1.3
-    
+
 flutter:
   uses-material-design: true
-
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
