--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  cached_network_image: ^2.4.1
   cloud_firestore: ^0.14.3+1
   cupertino_icons: ^1.0.0
   dartz: ^0.9.2
