--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   flutter_icons: ^1.1.0
   get_it: ^5.0.3
   image_picker: ^0.6.7+14
+  multi_image_picker: ^4.7.14
   shared_preferences: ^0.5.12+4
 
 dev_dependencies:
