--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   firebase_auth: ^0.18.3+1
   firebase_core: ^0.5.2+1
   firebase_storage: ^5.1.0
+  flutter_absolute_path: ^1.0.6
   flutter_bloc: ^6.1.1
   flutter_icons: ^1.1.0
   get_it: ^5.0.3
