--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,11 +18,13 @@ dependencies:
   equatable: ^1.2.5
   firebase_auth: ^0.18.3+1
   firebase_core: ^0.5.2+1
+  firebase_messaging: ^7.0.3
   firebase_storage: ^5.1.0
   flutter_absolute_path: ^1.0.6
   flutter_bloc: ^6.1.1
   flutter_icons: ^1.1.0
   get_it: ^5.0.3
+  http: ^0.12.2
   image_picker: ^0.6.7+14
   multi_image_picker: ^4.7.14
   shared_preferences: ^0.5.12+4
